
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________



2024 MAY 22a
  * in model/fluid/_Favre-Reynolds/fluid_bdry.c
    - started implementation of BDRY_WALLABLATION1
    - added update_bdry_wall_ablation()
 

2024 MAY 21a
  * in model/chem/_Cs_Air_Plasma_15s/chem.c
    - added AIRCHEMMODEL_PARENT2023
    - added CESIUMCHEMMODEL_PARENT2024
    - got rid of CESIUMIONIZATIONMODEL* and CESIUMRECOMBINATIONMODEL* options and rather implemented
      CESIUMCHEMMODEL_LENARD1964, CESIUMCHEMMODEL_ANDRIENKO2021, and CESIUMCHEMMODEL_PARENT2022
  * in model/chem/_Cs_Air_Plasma_15s/doc/report.tex
    - updated the documentation to match later changes
  * in model/chem/_Cs_Air_Plasma_15s
    - added parent2023.c and parent2023.h


2024 MAY 16a
  * in model/share/transport_share.c
    - added _mueN_CO()
    - in _mueNk_from_Te_ParentMacheret(), added call to _mueN_CO()
    - in _mueNk_from_Te_ParentMacheret(), now calls _mueN_N2(Te) should the species mobility
      not be specified (default mobility is now N2 mobility instead of 3.74E19*exp(33.5/sqrt(log(Te)))
  * in model/thermo/_generic/electronimpact.c
    - commented out _EoverN_from_Te_NH3_Snoeckx2023() and _Te_from_EoverN_NH3_Snoeckx2023()
    - added _EoverN_from_Te_CO_Morgan()
    - added _Te_from_EoverN_CO_Morgan()
    - in _EoverNk_from_Te(), added call to _EoverN_from_Te_CO_Morgan()
    - added _Tek_from_EoverN()
    - in _EoverN_from_rhok_Te(), rewrote the function so that it calls _EoverNk_from_Te()
    - in _Te_from_rhok_EoverN(), rewrote the function so that it calls _Tek_from_EoverN()
  * in model/thermo/doc/electronimpact.tex
    - added documentation for CO
  * in model/transport/doc/report.tex
    - added documentation for CO mobility
    

2024 MAY 15b
  * in cycle/share/cycle_share.c